  into settings and strings.xml
- Added dvd-iphone.sh to svn
- Addes dvd-psp.sh to svn 
- Integrate dvd-iphone.sh and dvd-psp.sh into addon
- Code cleaning 
- Added deinstall.sh to svn
- Added first steps in README.Linux 
- Folder tools added to svn
- Check that bluray-functions are set in the case a usr
  wish to transcode all dvd's to mkv.
- Integrate makemkv 1.6.1 for 32 bit into setup.sh 
- Checked 1.6.1 for 64 bit 
- Allow execution of user definded functions 1-9 over addon

  example : - start a vpn connection 
            and many more  

- Add progress.sh to svn 
- Add svn-checkout.sh to svn 
- Remove iso function from main-menu
- Remove mpeg2 function from transcoding-menu
- Integrate makemkv 1.6.1 for 32 bit into setup.sh 
- Checked 1.6.1 for 64 bit 
- Test integrated tests to detect dvd's with crc-error copy protection 


Fixes:

- Until we have a Release Candidate the verbose flag will be set default to on.
- Language-ID for network windows were wrong (fixed).
- Range for Network messages moved.
- same error-level for all shell-scripts "tool not found"
- Typo inside shell-scripts.
- Test if we use makemkvcon inside a script that the command is running.
- Typo inside dvd-handbrake.sh / text about passes fixed.
- In the case the +x attribut for the shell-scripts is not set, we set them for 
  all shell-scripts.
- Linebreaks for longer text inside dialog.ok function is needed.
- it seems that makemkv 1.6.0 had a few problems .... I do test version 1.6.1 now
- We should only have 1 bluray option file (thanks to dekani from xbmc.org forum)
- removed mpeg2 transcoding from svn ... (comes in later release) this has not a 
  important priority
- I have a brand-new dvd "Illuminati" that seems to be very good protected.
  A investigate more tests on this ....

  - dd copy .... error after 7 % 
  - Transcoding with handbrake  .... exception ....
  - rescue-copy do work but is very slow in execution.

 
 


