@@ -155,6 +155,7 @@ Changes:
 - Integrate makemkv 1.6.1 for 32 bit into setup.sh 
 - Checked 1.6.1 for 64 bit 
 - Test integrated tests to detect dvd's with crc-error copy protection 
+- integrate copy-protection inside dvd-transcode on main-menu.
 
 
 Fixes:
